Fix Unit tests with new API